금요일꺼 추

--- a/function03.html
+++ b/function03.html
@@ -8,14 +8,14 @@
 </style>
 <script>
 	function display01(){
-		document.getElementById("myImage").src = "/resources/images/car01.png";
+		document.getElementById("myImage").src = "resources/images/car01.png";
 	}
 </script>
 </head>
 <body>
 
-<img id="myImage" src="/resources/images/img.jpg" onclick="display01()">
-<img class="image" src="/resources/images/img.jpg">
+<img id="myImage" src="resources/images/img.jpg" onclick="display01()">
+<img class="image" src="resources/images/img.jpg">
 
 </body>
 </html>
